--- a/libs/stack/stack-ui/src/components/WysiwygBlock/wysiwyg.stories.mdx
+++ b/libs/stack/stack-ui/src/components/WysiwygBlock/wysiwyg.stories.mdx
@@ -83,7 +83,7 @@ export const Template = (args) => {
   <Story
     name="With aria attributes"
     args={{
-      content: '<a class="bg-color-1-300 disabled:opacity-50" href="#" disabled="true" aria-label="I am a disabled link">Accessible link</a>',
+      content: '<a class="bg-color-1-300 disabled:opacity-50" href="#" disabled aria-label="I am a disabled link">Accessible link</a>',
     }}
   >
     {Template.bind({})}
