--- a/libs/stack/stack-ui/src/components/WysiwygBlock/wysiwyg.stories.mdx
+++ b/libs/stack/stack-ui/src/components/WysiwygBlock/wysiwyg.stories.mdx
@@ -85,6 +85,20 @@ export const Template = (args) => {
     args={{
       content: '<a class="bg-color-1-300 disabled:opacity-50" href="#" disabled aria-label="I am a disabled link">Accessible link</a>',
     }}
+    
+  >
+    {Template.bind({})}
+  </Story>
+</Canvas>
+
+### Wysiwyg Block SVG element
+
+<Canvas>
+  <Story
+    name="With SVG element"
+    args={{
+      content: '<div><svg width="500" height="500" viewBox="0 0 500 500" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="svg-class" id="svg-id" style="border: 1px solid black;" tabindex="1" xml:base="http://example.com" xml:lang="en" xml:space="preserve"><defs><marker id="arrow" markerWidth="10" markerHeight="10" refX="0" refY="3" orient="auto"><path d="M0,0 L0,6 L9,3 z" fill="#f00" /></marker><pattern id="pattern" patternUnits="userSpaceOnUse" width="10" height="10"><rect width="10" height="10" fill="gray" /><circle cx="5" cy="5" r="3" fill="white" /></pattern><clipPath id="clip"><circle cx="25" cy="25" r="20" /></clipPath><mask id="mask" x="0" y="0" width="100" height="100"><rect x="0" y="0" width="100" height="100" fill="white" /><circle cx="50" cy="50" r="40" fill="black" /></mask><filter id="blur"><feGaussianBlur in="SourceGraphic" stdDeviation="5" /></filter></defs><circle cx="50" cy="50" r="40" fill="blue" stroke="black" stroke-width="2" /><ellipse cx="150" cy="50" rx="40" ry="20" fill="green" /><line x1="200" y1="10" x2="300" y2="50" stroke="red" stroke-width="2" /><rect x="10" y="100" width="100" height="50" fill="url(#pattern)" /><polygon points="200,110 250,190 150,190" fill="purple" /><polyline points="300,110 350,190 250,190" fill="none" stroke="orange" stroke-width="2" /><path d="M400 110 Q450 190 350 190" fill="none" stroke="brown" stroke-width="2" /><text x="10" y="200" fill="black" font-family="Verdana" font-size="20">SVG Text<tspan x="10" y="220" fill="red">TSpan Text</tspan></text><g fill="none" stroke="black" stroke-width="2"><circle cx="50" cy="250" r="20" /><rect x="100" y="230" width="50" height="40" /></g><use xlink:href="#arrow" x="200" y="200" width="10" height="10" /><symbol id="symbol" viewBox="0 0 100 100"><circle cx="50" cy="50" r="40" /></symbol><use xlink:href="#symbol" x="300" y="200" width="50" height="50" /><animate attributeName="x" from="0" to="100" dur="2s" repeatCount="indefinite" /><animateTransform attributeName="transform" type="rotate" from="0 50 50" to="360 50 50" dur="5s" repeatCount="indefinite" /><animateMotion path="M0,0 L100,100" dur="5s" repeatCount="indefinite" /><animateColor attributeName="fill" from="red" to="blue" dur="2s" repeatCount="indefinite" /><set attributeName="opacity" to="0.5" begin="2s" dur="2s" /><rect x="10" y="300" width="100" height="100" fill="blue" filter="url(#blur)" /><rect x="150" y="300" width="100" height="100" fill="blue" mask="url(#mask)" /><rect x="300" y="300" width="50" height="50" fill="blue" clip-path="url(#clip)" /></svg></div>',
+    }}
   >
     {Template.bind({})}
   </Story>
