add img component, story, docs

--- a/libs/stack/stack-ui/src/components/WysiwygBlock/wysiwyg.mdx
+++ b/libs/stack/stack-ui/src/components/WysiwygBlock/wysiwyg.mdx
@@ -56,3 +56,9 @@ export const Template = (args) => {
 <Canvas>
   <Story of={WysiwygStories.WebsiteWithScrolling} />
 </Canvas>
+
+### Wysiwyg Block with image tag
+
+<Canvas>
+  <Story of={WysiwygStories.WithImageTag} />
+</Canvas>
