--- a/libs/stack/stack-ui/src/components/fields/TextInputField/text-input-field.mdx
+++ b/libs/stack/stack-ui/src/components/fields/TextInputField/text-input-field.mdx
@@ -1,4 +1,4 @@
-import { Canvas, Meta, Story } from '@storybook/blocks'
+import { Canvas, Meta, Story, ArgTypes } from '@storybook/blocks'
 import TextInputField from './index'
 import * as TextInputFieldStories from './text-input-field.stories';
 
@@ -15,14 +15,29 @@ export const Template = (args) => {
 
 # Text Input Field
 
-<Canvas>
-  <Story of={TextInputFieldStories.Default} />
-</Canvas>
+## Props
 
-<Canvas>
-  <Story of={TextInputFieldStories.Disabled} />
-</Canvas>
+<ArgTypes exclude={[
+  'fieldRef',
+  'required',
+  'disabled',
+  'isError',
+]} />
 
-<Canvas>
-  <Story of={TextInputFieldStories.Error} />
-</Canvas>
+## Showcase
+
+### Default
+
+<Canvas of={TextInputFieldStories.Default} />
+
+### Disabled
+
+<Canvas of={TextInputFieldStories.Disabled} />
+
+### Error
+
+<Canvas of={TextInputFieldStories.Error} />
+
+### Error with icon
+
+<Canvas of={TextInputFieldStories.ErrorWithIcon} />
