--- a/libs/stack/stack-ui/src/components/fields/DatePicker/date-picker.mdx
+++ b/libs/stack/stack-ui/src/components/fields/DatePicker/date-picker.mdx
@@ -1,4 +1,4 @@
-import { Canvas, Meta, Story } from '@storybook/blocks'
+import { Canvas, Meta, Story, ArgTypes } from '@storybook/blocks'
 import DatePicker from './'
 import DateRangePicker from './DateRangePicker'
 import { OverlayContainer } from '@react-aria/overlays'
@@ -10,18 +10,15 @@ import * as DatePickerStories from './date-picker.stories';
 
 Date Picker component.
 
-<Canvas>
-  <Story of={DatePickerStories.Default} />
-</Canvas>
+## Props
 
-<Canvas>
-  <Story of={DatePickerStories.DateFieldAndIcon} />
-</Canvas>
+<ArgTypes of={DatePickerStories.Default} />
 
-<Canvas>
-  <Story of={DatePickerStories.OnlyIcon} />
-</Canvas>
+## Showcase
 
-<Canvas>
-  <Story of={DatePickerStories.DateRangePicker} />
-</Canvas>
+<Canvas of={DatePickerStories.Default} />
+
+<Canvas of={DatePickerStories.DateFieldAndIcon} />
+
+<Canvas of={DatePickerStories.OnlyIcon} />
+
