docs(stack-ui): stories documenting usage of unavailable/disabled/invalid dates

--- a/libs/stack/stack-ui/src/components/fields/DatePicker/date-picker.mdx
+++ b/libs/stack/stack-ui/src/components/fields/DatePicker/date-picker.mdx
@@ -16,9 +16,26 @@ Date Picker component.
 
 ## Showcase
 
+### Style variations
+
+#### Default
+
 <Canvas of={DatePickerStories.Default} />
+
+#### Date field and icon
 
 <Canvas of={DatePickerStories.DateFieldAndIcon} />
 
+#### Only icon
+
 <Canvas of={DatePickerStories.OnlyIcon} />
 
+### Modified behaviors
+
+#### Unavailable dates
+
+<Canvas of={DatePickerStories.UnavailableDates} />
+
+#### Controlled
+
+<Canvas of={DatePickerStories.Controlled} />
