--- a/libs/stack/stack-ui/src/components/fields/Select/Select.mdx
+++ b/libs/stack/stack-ui/src/components/fields/Select/Select.mdx
@@ -1,15 +1,10 @@
 {/* Select.stories.mdx */}
 
 import { Canvas, Meta, Story } from '@storybook/blocks'
-import Select, { SelectStyled } from './Select'
-import SelectItem from '../SelectItem/SelectItem'
-import SelectContent from '../../../storybook/SelectField'
-import ChevronLeft from '../../icons/ChevronLeft'
+import Select from './Select'
 import * as SelectStories from './Select.stories';
 
 <Meta of={SelectStories} />
-
-export const Template = (args) => <SelectContent {...args} />
 
 # Select
 
@@ -17,12 +12,4 @@ Select Field component.
 
 <Canvas>
   <Story of={SelectStories.Default} />
-</Canvas>
-
-<Canvas>
-  <Story of={SelectStories.Disabled} />
-</Canvas>
-
-<Canvas>
-  <Story of={SelectStories.Error} />
 </Canvas>
