--- a/libs/stack/stack-ui/src/components/fields/DatePicker/date-picker.mdx
+++ b/libs/stack/stack-ui/src/components/fields/DatePicker/date-picker.mdx
@@ -16,6 +16,8 @@ Calculations for this component are done with the [`@internationalized/date`](ht
 
 <ArgTypes of={DatePickerStories.Default} />
 
+Many date picker props are shared the the `Calendar` component. For more information, see the [Calendar documentation](?path=/docs/base-components-calendar--docs) for more information.
+
 ## Showcase
 
 ### Style variations
