ix(stack-ui): consistent theming, better customizability for calendar & DatePicker
* fix(stack-ui): more consistent themeing, better customizability

* fix(stack-ui): consistent theming, better customizability for calendar

* docs(stack-ui): theme and stories to showcase new features

* fix(stack-ui): export calendar/datepicker subcomponents

* chore: dev install @storybook/react for types

* docs(stack-ui): stories documenting usage of unavailable/disabled/invalid dates

* fix(stack-ui): custom invalid indicator, pass unavailability to tokens

* test(stack-ui): remove @storybook/react

* chore: npm i

* Revert "chore: npm i"

This reverts commit 3ab4484dc6ad9a2175b53c7c8ace2c9573fa3d96.

* Revert "test(stack-ui): remove @storybook/react"

This reverts commit cfeed5b158877a58fc980efd4e5903b51f7c2195.

* fix(stack-ui): useThemeContext relative import

* fix(stack-ui): calendar components get all state tokens + outside range token

* refactor(stack-ui): get calendar from main react-aria/stately libs

* docs(stack-ui): more documentation, better unavailable dates example

* fix(stack-ui): invalid indicator supports themeing + position token

* docs(stack-ui): custom invalid indicator in stories

* fix(stack-ui): missing use client directives

* docs(stack-ui): better styles for unavailable types of dates

* refactor(stack-ui): datepicker from main react-aria lib

* docs(stack-ui): calendar, range calendar docs

* chore(stack-ui): update react-aria for new calendar usage

* fix(stack-ui): allow 2-letters weekday labels

* fix(stack-ui): allow passing props to calendargrid from calendars

* chore(stack-ui): cleanup

* refactor(stack-ui): import datepicker directly from main packages

* fix(stack-ui): fix typing issue caused by react-aria update

* fix: checkbox a11y issue

* fix: lint

* feat(stack-ui): added wysiwyg allowed attribute and tags control

* docs(stack-ui): enhance Wysiwyg Block stories with comprehensive examples and documentation

* feat: add header option

--- a/libs/stack/stack-ui/src/components/fields/DatePicker/date-picker.mdx
+++ b/libs/stack/stack-ui/src/components/fields/DatePicker/date-picker.mdx
@@ -1,4 +1,4 @@
-import { Canvas, Meta, Story } from '@storybook/blocks'
+import { Canvas, Meta, Story, ArgTypes } from '@storybook/blocks'
 import DatePicker from './'
 import DateRangePicker from './DateRangePicker'
 import { OverlayContainer } from '@react-aria/overlays'
@@ -10,18 +10,40 @@ import * as DatePickerStories from './date-picker.stories';
 
 Date Picker component.
 
-<Canvas>
-  <Story of={DatePickerStories.Default} />
-</Canvas>
+Calculations for this component are done with the [`@internationalized/date`](https://react-spectrum.adobe.com/internationalized/date/index.html) library.
 
-<Canvas>
-  <Story of={DatePickerStories.DateFieldAndIcon} />
-</Canvas>
+## Props
 
-<Canvas>
-  <Story of={DatePickerStories.OnlyIcon} />
-</Canvas>
+<ArgTypes of={DatePickerStories.Default} />
 
-<Canvas>
-  <Story of={DatePickerStories.DateRangePicker} />
-</Canvas>
+Many date picker props are shared the the `Calendar` component. For more information, see the [Calendar documentation](?path=/docs/base-components-calendar--docs) for more information.
+
+## Showcase
+
+### Style variations
+
+#### Default
+
+<Canvas of={DatePickerStories.Default} />
+
+#### Date field and icon
+
+<Canvas of={DatePickerStories.DateFieldAndIcon} />
+
+#### Only icon
+
+<Canvas of={DatePickerStories.OnlyIcon} />
+
+### Modified behaviors
+
+#### Unavailable dates
+
+In this example, unavailable dates will be rendered as disabled, making the user unable to select them. However, they are still technically selectable via the date field.
+
+If the user attempts to select an unavailable date via the date field, the `isInvalid` state will be applied to the whole component as a token.
+
+<Canvas of={DatePickerStories.UnavailableDates} />
+
+#### Controlled
+
+<Canvas of={DatePickerStories.Controlled} />
