--- a/libs/stack/stack-ui/src/components/TagGroup/tag-group.mdx
+++ b/libs/stack/stack-ui/src/components/TagGroup/tag-group.mdx
@@ -39,9 +39,28 @@ The following tokens are available on the `Tag` component:
 
 <Canvas of={TagGroupStories.ErrorMessage} />
 
-### Maximal Props
+### Maximal Props (Controlled)
 
-Maximal interactions (default selected, removable, disabled)
+Maximal interactions (default selected, removable, disabled).
+
+For controlled usage, you can use the `useListData` hook to manage the state of the tag group, although it is also possible with `useState` typed to `Set<Key>`. See the [useListData](https://react-spectrum.adobe.com/react-stately/useListData.html) documentation for more information.
+
+```tsx
+const items = [{ key: 'blue', children: 'Blue' }, { key: 'red', children: 'Red' }, { key: 'green', children: 'Green' }]
+const list = useListData({ initialItems: items, initialSelectedKeys: ['blue'] })
+
+return (
+  <TagGroup
+    items={list.items}
+    selectedKeys={list.selectedKeys}
+    onSelectionChange={list.setSelectedKeys}
+    onRemove={list.remove}
+  >
+    {/* Spreading the key prop gives a warning */}
+    {({ key, ...item }) => <TagItem {...item} key={key} />}
+  </TagGroup>
+)
+```
 
 <Canvas of={TagGroupStories.MaximalProps} />
 
