refactor(stack-ui): combobox files naming convention

--- a/libs/stack/stack-ui/src/components/fields/ComboBox/combo-box.mdx
+++ b/libs/stack/stack-ui/src/components/fields/ComboBox/combo-box.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story } from '@storybook/blocks'
-import ComboBox from './ComboBox'
-import * as ComboBoxStories from './ComboBox.stories';
+import ComboBox from './index'
+import * as ComboBoxStories from './combo-box.stories';
 
 <Meta of={ComboBoxStories} />
 
