fix popover demo, warnings, errors

--- a/libs/stack/stack-ui/src/components/Box/box.mdx
+++ b/libs/stack/stack-ui/src/components/Box/box.mdx
@@ -17,5 +17,5 @@ export const Template = (args) => (
 Box component. Generic wrapper for your website or app.
 
 <Canvas>
-  <Story of={BoxStories.Box} />
+  <Story of={BoxStories.BoxStory} />
 </Canvas>
