--- a/libs/stack/stack-ui/src/components/Button/button.mdx
+++ b/libs/stack/stack-ui/src/components/Button/button.mdx
@@ -40,5 +40,5 @@ You can use property `as` to render the button with a different component, e.g. 
 </Canvas>
 
 <Canvas>
-  <Story of={ButtonStories.Icon} />
+  <Story of={ButtonStories.IconStory} />
 </Canvas>
