--- a/libs/stack/stack-ui/src/components/Date/date.mdx
+++ b/libs/stack/stack-ui/src/components/Date/date.mdx
@@ -40,5 +40,5 @@ The language is handled by the `I18nProvider` of `react-aria`.
 </Canvas>
 
 <Canvas>
-  <Story of={DateStories.$2Digits} />
+  <Story of={DateStories.TwoDigits} />
 </Canvas>
