docs(next-component): update stories with more use cases

--- a/libs/stack/next-component/src/components/Link/link.mdx
+++ b/libs/stack/next-component/src/components/Link/link.mdx
@@ -39,4 +39,37 @@ It also add a few more features to the next/link component
 
 ## Showcase
 
+### Internal/external
+
+#### Internal
+
+<Canvas of={LinkStories.Internal} />
+
+#### External
+
+<Canvas of={LinkStories.External} />
+
+### Locale
+
+#### Passed
+
+<Canvas of={LinkStories.Locale} />
+
+#### Context
+
+<Canvas of={LinkStories.ContextLocale} />
+
+### Scroll behavior
+
+#### Default
+
 <Canvas of={LinkStories.ScrollDefault} />
+
+#### False
+
+<Canvas of={LinkStories.ScrollFalse} />
+
+#### Top
+
+<Canvas of={LinkStories.ScrollTop} />
+
