docs(stack-ui): update docs

--- a/libs/stack/stack-ui/src/components/SkipToMain/skip-to-main.mdx
+++ b/libs/stack/stack-ui/src/components/SkipToMain/skip-to-main.mdx
@@ -63,7 +63,7 @@ function Layout({ children }) {
 
 ### SkipToMain Props
 - `href` (string): Target anchor for the skip link (default: '#main')
-- `ariaLabel` (string, **required**): Accessible label for screen readers
+- `ariaLabel` (string): Accessible label for screen readers
 - `children` (ReactNode): Button text content
 - All standard `TDefaultComponent` props (themeName, tokens, customTheme)
 
